--- a/Style/styleregister.css
+++ b/Style/styleregister.css
@@ -26,7 +26,7 @@ body {
   background: transparent;
   border: 2px solid;
   backdrop-filter: blur(15px);
-  color: #fff;
+  color: #fff6f6;
   border-radius: 20px;
   padding: 5%;
 }
@@ -64,10 +64,10 @@ input[type=Password] {
   border: none;
   background: rgba(211, 211, 211, 0.315);
   border-radius: 10px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 ::placeholder{
-  color:rgb(255, 255, 255);
+  color:rgb(0, 0, 0);
 }
 
