--- a/Style/stylehomepage.css
+++ b/Style/stylehomepage.css
@@ -8,10 +8,12 @@
   body {
     min-height: 100vh;
   }
+  
   header {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     padding: 30px 100px;
+    background: red;
   }
