--- a/Style/stylehomepage.css
+++ b/Style/stylehomepage.css
@@ -1,19 +1,138 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
+body {
+  background-color: darkslategray;
+}
 
-  body {
-    min-height: 100vh;
-  }
-  
-  header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 30px 100px;
-    background: red;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  height: 10vh;
+  position: sticky;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  Left: 0;
+  width: 100%;
+  padding: 2%;
+  background: rgba(0, 0, 0, 0.493);;
+  color: #fff;
+  justify-content: space-between;
+  z-index: 99;
+}
+
+img{
+  width: 100px;
+}
+
+.logo {
+  font-size: 2em;
+  color: #fff;
+  user-select: none;
+}
+
+.navigation a {
+position:relative;
+font-size: 1.1em;
+color: #fff;
+text-decoration: none;  
+font-weight: 500;
+margin-left: 40px;
+}
+
+.navigation a::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 3px;
+  background: #fff;
+  border-radius: 5px;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .5s;
+}
+
+.navigation a:hover:after{
+  transform-origin: left;
+  transform: scaleX(1)
+}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url(../img/new.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.umrandung {
+  width: auto;
+  background: transparent;
+  border: 2px solid;
+  backdrop-filter: blur(15px);
+  color: #fff;
+  border-radius: 20px;
+  padding: 5%;
+}
+
+
+input[type=text],
+input[type=Password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: rgba(211, 211, 211, 0.315);
+  border-radius: 10px;
+  color: white;
+}
+
+::placeholder {
+  color: white;
+}
+
+.umrandung h1,
+p {
+  font-size: 36px;
+  text-align: center;
+}
+
+.knopf {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 36px;
+  width: 100%;
+  border-radius: 10px;
+  background-color: rgba(211, 211, 211, 0.697);
+  color: white;
+  border: none;
+}
+
+body, html {
+  height: 100%;
+}
+
+.parallax {
+  /* The image used */
+  background-image: url(../img/new.jpg);
+s
+  /* Full height */
+  height: 100%; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
