--- a/Style/stylehomepage.css
+++ b/Style/stylehomepage.css
@@ -69,7 +69,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url(../img/new.jpg) no-repeat;
+  background: url(../img/Uni2.png) no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -117,22 +117,4 @@ p {
   background-color: rgba(211, 211, 211, 0.697);
   color: white;
   border: none;
-}
-
-body, html {
-  height: 100%;
-}
-
-.parallax {
-  /* The image used */
-  background-image: url(../img/new.jpg);
-s
-  /* Full height */
-  height: 100%; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
