--- a/Style/stylehomepage.css
+++ b/Style/stylehomepage.css
@@ -68,21 +68,17 @@ header {
 }
 
 .footer-text {
-  opacity: 0;
-  transition: opacity 0.5s ease; /* Übergangseffekt für die Sichtbarkeit */
+  position: absolute;
+  bottom: -100px; /* Verstecken Sie den Text außerhalb des sichtbaren Bereichs */
+  left: 0;
+  width: 100%;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   text-align: center;
-  font-size: 20px;
-  line-height: 1.5;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  box-sizing: border-box;
+  transition: bottom 0.5s ease; /* Übergangseffekt für die Position */
 }
 
 .footer-text.visible {
-  opacity: 1; /* Text wird sichtbar, wenn die Klasse 'visible' angewendet wird */
+  bottom: 6; /* Text sichtbar, wenn die Klasse 'visible' hinzugefügt wird */
 }
